vaultwarden/vaultwarden.yml
apiVersion: v1
kind: Service
metadata:
  name: vaultwarden
  labels:
    app: vaultwarden
spec:
  selector:
    app: vaultwarden
  ports:
  - name: web
    port: 80
  - name: websocket
    port: 3012
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: vaultwarden
  labels:
    app: vaultwarden
spec:
  serviceName: vaultwarden
  replicas: 1
  updateStrategy:
    type: RollingUpdate
  selector:
    matchLabels:
      app: vaultwarden
  template:
    metadata:
      labels:
        app: vaultwarden
      annotations:
        linkerd.io/inject: enabled
    spec:
      containers:
      - name: vaultwarden
        image: vaultwarden/server:1.21.0
        volumeMounts:
        - mountPath: /data
          name: vaultwarden
        resources:
          limits:
            cpu: 500m
            memory: 150Mi
          requests:
            cpu: 100m
            memory: 50Mi
        ports:
        - name: web
          containerPort: 80
        - name: websocket
          containerPort: 3012
        readinessProbe:
          httpGet:
            path: /alive
            port: 80
          initialDelaySeconds: 10
          timeoutSeconds: 5
        livenessProbe:
          httpGet:
            path: /alive
            port: 80
          initialDelaySeconds: 30
          timeoutSeconds: 5
  volumeClaimTemplates:
  - metadata:
      name: vaultwarden
    spec:
      storageClassName: longhorn
      accessModes:
      - ReadWriteOnce
      resources:
        requests:
          storage: 1Gi
